--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,7 @@ add_subdirectory(src)
 include_directories(src)
 
 
-foreach(App "light" "mdglap")
+foreach(App "light" "charm" "bottom")
 	add_executable(${App} ./TestMains/${App}.cpp)
 	target_link_libraries(${App} ${LIBRARY_NAME})
 	install(TARGETS ${App} DESTINATION bin)
